<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    tools:context=".Fragments.RecyclerViewFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionEditInputPlaces"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeDescrption">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditPlaces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/temperatureEditInputPlaces"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_sunny"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/temperature">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/temperatureEditPlaces"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/puntuationEditInputPlaces"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_star"
                    android:layout_marginStart="12dp"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/puntuacionText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/puntuationEditPlaces"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationEditInputPlaces"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationEditPlaces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/generalInfoEditInputPlaces"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generalInfo"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/generalInfoEditPlaces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
